# dspm-connector-templates

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  GLOSSARY.md  README.md  STOP_PAUSE_RESUME_GUIDE.md  dspm-connector-templates.sln  templates.json
.github/: CODEOWNERS
.github/workflows/: ruff.yml
template/netwrix-csharp/: .editorconfig  Dockerfile  NuGet.config  README.md  template.yml
template/netwrix-golang/: Dockerfile  local_testing.go  template.yml
template/netwrix-internal-csharp/: Dockerfile  Dockerfile.local  FunctionContext.cs  FunctionRequest.cs  FunctionResponse.cs  NuGet.config  Program.cs  Root.csproj  meta.json
template/netwrix-internal-python/: .editorconfig  Dockerfile  Dockerfile.local  index.py  pyproject.toml  redis_signal_handler.py  state_manager.py  template.yml
template/netwrix-java17/: Dockerfile  template.yml
template/netwrix-node18/: index.js  package.json  template.yml
template/netwrix-node20/: index.js  local_testing.js  package.json  template.yml
template/netwrix-node22/: index.js  package.json  template.yml
template/netwrix-python/: Dockerfile  Dockerfile.debian  Dockerfile.local  Dockerfile.local.powershell  Dockerfile.powershell  TESTING.md  data_query.py  implicit_deleter.py  index.py  local_testing.py  pyproject.toml  pytest.ini  redis_signal_handler.py  requirements.txt  state_manager.py  template.yml
template/netwrix-python/function/: handler_test.py  pyproject.toml  redis_signal_handler.py  requirements.txt  state_manager.py
template/netwrix-python/function/tests/: __init__.py  test_batch_manager.py  test_redis_signal_handler.py  test_state_manager.py
template/netwrix-ruby/: index.rb  local_testing.rb
template/python-connector/: Dockerfile  index.py  template.yml
template/python-function-common/: Dockerfile  Dockerfile.local  index.py  (+1 more)
(+80 files in other folders)
