[project]
name = "netwrix-python"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["flask>=3.1.2", "requests>=2.32.5", "waitress>=3.0.2"]

[dependency-groups]
dev = ["debugpy>=1.8.17"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "T10", # flake8-debugger
]
ignore = [
  "E501", # line too long (handled by line-length setting)
]
