[project]
name = "netwrix-python"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "requests>=2.32.5",
    "waitress>=3.0.2",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-flask>=0.42b0",
    "opentelemetry-instrumentation-requests>=0.42b0",
    "opentelemetry-exporter-otlp-proto-http>=1.21.0",
    "orjson>=3.10.0",
]

[dependency-groups]
dev = [
    "debugpy==1.8.16",
    "ruff>=0.13.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "T10", # flake8-debugger
]
ignore = [
  "E501", # line too long (handled by line-length setting)
]
